feat(aderapos): Updated Feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -79,6 +79,8 @@ aderapos.telegram.bot-username=@AderaPOSBot
 aderapos.mor.api-url=https://mock-mor-api.local
 aderapos.mor.retry-interval-ms=15000
 aderapos.mor.max-retries=3
+# Telegram Bot Mini App Launcher
+aderapos.telegram.miniapp-url=https://aderapos.netlify.app/
 
 # -------------------------------
 # Monitoring / Health
