feat(render): Config DONE

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,16 +11,34 @@ server.servlet.context-path=/aderapos
 # -------------------------------
 # Database (PostgreSQL)
 # -------------------------------
-spring.datasource.url=jdbc:postgresql://localhost:5432/aderapos_db
-#  ?currentSchema=test
-spring.datasource.username=postgres
-spring.datasource.password=local
+#spring.datasource.url=jdbc:postgresql://localhost:5432/aderapos_db
+##  ?currentSchema=test
+#spring.datasource.username=postgres
+#spring.datasource.password=local
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# ===============================
+# Database Configuration For RENDER
+# ===============================
+spring.datasource.url=jdbc:postgresql://dpg-d61fm57fte5s738gmbrg-a:5432/aderapos_db
+spring.datasource.username=aderauser
+spring.datasource.password=Y7CBYfYRVFBmlEHhB2gpG6FKEmDy6KIY
+
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ===============================
+# JPA / Hibernate
+# ===============================
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
 # -------------------------------
 # JPA / Hibernate
