feat(render): Config DONE with SECRET HIDDEN

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ server.servlet.context-path=/aderapos
 # -------------------------------
 # Database (PostgreSQL)
 # -------------------------------
+# For local development, uncomment and set your local DB
 #spring.datasource.url=jdbc:postgresql://localhost:5432/aderapos_db
-##  ?currentSchema=test
 #spring.datasource.username=postgres
 #spring.datasource.password=local
 #spring.datasource.driver-class-name=org.postgresql.Driver
@@ -23,12 +23,11 @@ server.servlet.context-path=/aderapos
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # ===============================
-# Database Configuration For RENDER
+# Database Configuration For RENDER / Docker
 # ===============================
-spring.datasource.url=jdbc:postgresql://dpg-d61fm57fte5s738gmbrg-a:5432/aderapos_db
-spring.datasource.username=aderauser
-spring.datasource.password=Y7CBYfYRVFBmlEHhB2gpG6FKEmDy6KIY
-
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ===============================
@@ -36,7 +35,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # ===============================
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 
@@ -56,7 +55,7 @@ logging.file.name=aderapos.log
 # -------------------------------
 # Security & JWT
 # -------------------------------
-aderapos.jwt.secret=YourSuperSecretJWTKeyHere
+aderapos.jwt.secret=${JWT_SECRET}
 aderapos.jwt.expiration-ms=900000   # 15 min
 aderapos.jwt.refresh-expiration-ms=604800000  # 7 days
 aderapos.security.password-encoder=bcrypt  # bcrypt or argon2
@@ -81,24 +80,22 @@ aderapos.crypto.signature-algorithm=SHA256withRSA
 # -------------------------------
 # QR / Invoice
 # -------------------------------
-
 # Local dev
-aderapos.qr.base-url=http://localhost:8080/aderapos/api/verify
-
-#Production
-#aderapos.qr.base-url=https://aderapos.com/verify
+#aderapos.qr.base-url=http://localhost:8080/aderapos/api/verify
+# Production (set via env var if needed)
+aderapos.qr.base-url=${QR_BASE_URL:https://aderapos.com/verify}
 aderapos.invoice.canonical-json=true
 
 # -------------------------------
 # External Services (Mock MoR / Telegram)
 # -------------------------------
-aderapos.telegram.bot-token=8451374752:AAHTyOkvM-qMRm1mFoUKkRlaSVdPBHis-nc
-aderapos.telegram.bot-username=@AderaPOSBot
-aderapos.mor.api-url=https://mock-mor-api.local
+aderapos.telegram.bot-token=${TELEGRAM_BOT_TOKEN}
+aderapos.telegram.bot-username=${TELEGRAM_BOT_USERNAME}
+aderapos.mor.api-url=${MOR_API_URL:https://mock-mor-api.local}
 aderapos.mor.retry-interval-ms=15000
 aderapos.mor.max-retries=3
 # Telegram Bot Mini App Launcher
-aderapos.telegram.miniapp-url=https://aderapos.netlify.app/
+aderapos.telegram.miniapp-url=${MINIAPP_URL:https://aderapos.netlify.app/}
 
 # -------------------------------
 # Monitoring / Health
@@ -106,4 +103,4 @@ aderapos.telegram.miniapp-url=https://aderapos.netlify.app/
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
 
-aderapos.api.base-url=http://localhost:8080/aderapos
+aderapos.api.base-url=${API_BASE_URL:http://localhost:8080/aderapos}
